# Calculator

./: .gitignore  .gitignore~  CMakeLists.txt
control/: Handlers.cpp  Handlers.h  MODES.h  MainFrame.cpp  MainFrame.h
model/: Calculator.cpp  Calculator.h  MODES.h  OPERATION_MODES.h  Operation.cpp  Operation.h
src/: Calculator_ProofOfConcept.cpp
view/: MainFrame.cpp  MainFrame.h  MainPanel.ui  MainPanel.ui~  MyButton.ui
